<resources>
    <string name="app_name">Android Design and Style</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_next">Next</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="error_password">Password must contain at least 8 characters.</string>
    <string name="filter_title">Filter</string>
    <string name="search_title">Search</string>
    <string name="product_title">Title</string>
    <string name="product_description">Secondary text</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_address">Address</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_zip">Zip</string>

</resources>